# mcp_ex

./: README.md  pyproject.toml
fastmcp/: __init__.py
host/: __init__.py
host/app/: app.py
host/mcp_client/: __init__.py  client.py  client_a.py  client_b.py
host/schema/: __init__.py  schema.py
mcp/: __init__.py
mcp/server/: __init__.py  http.py
mcp_server/: __init__.py
mcp_server/server_a/: __init__.py  server.py
mcp_server/server_b/: __init__.py  requirement.txt  server.py
tests/: test_clients.py  test_conversation_e2e.py  test_math_server.py  test_weather_server.py
